Remove duplicated trait layouts

--- a/app/src/main/res/layout/trait_categorical.xml
+++ b/app/src/main/res/layout/trait_categorical.xml
@@ -3,6 +3,7 @@
     android:id="@+id/categoricalLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     android:visibility="gone">
 
@@ -11,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:columnCount="3"
+        android:alignmentMode="alignBounds"
         android:orientation="horizontal">
 
         <Button
