--- a/app/src/main/res/layout/trait_date.xml
+++ b/app/src/main/res/layout/trait_date.xml
@@ -11,7 +11,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="15dp">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -70,13 +71,13 @@
                     android:minWidth="@dimen/button_default_width"
                     android:text="-1"
                     android:textColor="#000000"
-                    android:textSize="@dimen/text_size_xxlarge"
+                    android:textSize="@dimen/text_size_xlarge"
                     android:textStyle="bold" />
 
                 <ImageButton
                     android:id="@+id/enterBtn"
-                    android:layout_width="65dp"
-                    android:layout_height="65dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:background="@drawable/custom_round_button"
@@ -94,7 +95,7 @@
                     android:minWidth="@dimen/button_default_width"
                     android:text="+1"
                     android:textColor="#000000"
-                    android:textSize="@dimen/text_size_xxlarge"
+                    android:textSize="@dimen/text_size_xlarge"
                     android:textStyle="bold" />
 
             </LinearLayout>
