--- a/app/src/main/res/layout/trait_numeric.xml
+++ b/app/src/main/res/layout/trait_numeric.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text=";"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text="1"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text="2"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text="3"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text="+"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text="4"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -91,7 +91,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text="5"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -103,7 +103,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text="6"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -114,10 +114,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-
-
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text="-"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -129,7 +127,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text="7"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -141,7 +139,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text="8"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -153,7 +151,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text="9"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -165,7 +163,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text="*"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -177,7 +175,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text="."
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -189,7 +187,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:text="0"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -202,7 +200,7 @@
             android:layout_gravity="center"
             android:drawableLeft="@drawable/trait_numeric_backspace"
             android:gravity="center"
-            android:minWidth="85dp"
+            android:minWidth="@dimen/button_width_numeric"
             android:paddingLeft="29dp"
             android:text=" "
             android:textSize="@dimen/text_size_large"
