--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,6 @@
 
     <dimen name="button_default_height">40dp</dimen>
     <dimen name="button_default_width">110dp</dimen>
+    <dimen name="button_width_numeric">85dp</dimen>
+    <dimen name="button_width_disease">60dp</dimen>
 </resources>
