--- a/app/src/main/res/layout/trait_counter.xml
+++ b/app/src/main/res/layout/trait_counter.xml
@@ -1,71 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.fieldbook.tracker.traitLayouts.CounterTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/counterLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:visibility="gone">
+    android:visibility="visible">
 
-    <LinearLayout
-        android:id="@+id/counter"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:fitsSystemWindows="true">
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/curCount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="1"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_xxlarge"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/curCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingTop="10dp">
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:paddingBottom="15dp"
+            android:text="1"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_xxlarge"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/addBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/minusBtn"
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_margin="5dp"
-                android:background="@drawable/custom_round_button"
-                android:gravity="center|center_vertical"
-                android:minWidth="@dimen/button_default_width"
-                android:text="-1"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold"
-                tools:ignore="HardcodedText" />
+        <Button
+            android:id="@+id/minusBtn"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:background="@drawable/custom_round_button"
+            android:gravity="center|center_vertical"
+            android:text="-1"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold"
+            android:layout_marginRight="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/addBtn"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText" />
 
-            <Button
-                android:id="@+id/addBtn"
-                android:layout_width="145dp"
-                android:layout_height="145dp"
-                android:layout_margin="5dp"
-                android:background="@drawable/custom_round_button"
-                android:gravity="center"
-                android:text="+1"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_xxlarge"
-                android:textStyle="bold"
-                tools:ignore="HardcodedText" />
+        <Button
+            android:id="@+id/addBtn"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:background="@drawable/custom_round_button"
+            android:gravity="center"
+            android:text="+1"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_xxlarge"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/minusBtn"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText" />
 
-        </LinearLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </com.fieldbook.tracker.traitLayouts.CounterTraitLayout>
