Added new about page Added list of libraries in use

--- a/app/src/main/res/drawable/ic_about_libraries.xml
+++ b/app/src/main/res/drawable/ic_about_libraries.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
     <path
         android:fillColor="#000"
-        android:pathData="M12,7.77L18.39,18H5.61L12,7.77M12,4L2,20H22" />
+        android:pathData="M18,22A2,2 0 0,0 20,20V4C20,2.89 19.1,2 18,2H12V9L9.5,7.5L7,9V2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18Z" />
 </vector>
