--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,6 @@
         <item name="colorPrimary">@color/main_primary</item>
         <item name="colorPrimaryDark">@color/main_primaryDark</item>
         <item name="colorAccent">@color/main_colorAccent</item>
-
         <item name="buttonStyle">@style/ButtonStyle</item>
     </style>
 
@@ -13,9 +12,20 @@
         <item name="colorPrimary">@color/main_primary</item>
         <item name="colorPrimaryDark">@color/main_primaryDark</item>
         <item name="colorAccent">@color/main_colorAccent</item>
-
         <item name="buttonStyle">@style/ButtonStyle</item>
         <item name="toolbarStyle">@style/AppToolbar</item>
+    </style>
+
+    <style name="AppTheme.MaterialAboutActivity" parent="Theme.Mal.Light">
+        <item name="colorPrimary">@color/main_primary</item>
+        <item name="colorPrimaryDark">@color/main_primaryDark</item>
+        <item name="colorAccent">@color/main_colorAccent</item>
+    </style>
+
+    <style name="AppTheme.MaterialAboutActivity.Fragment" parent="Theme.Mal.Light">
+        <item name="colorPrimary">@color/main_primary</item>
+        <item name="colorPrimaryDark">@color/main_primaryDark</item>
+        <item name="colorAccent">@color/main_colorAccent</item>
     </style>
 
     <style name="AppDialog" parent="Theme.AppCompat.Light.Dialog">
