--- a/app/src/main/res/layout/trait_multicat.xml
+++ b/app/src/main/res/layout/trait_multicat.xml
@@ -6,10 +6,11 @@
     android:orientation="vertical"
     android:visibility="gone">
 
-    <com.fieldbook.tracker.utilities.ExpandableHeightGridView
+    <androidx.recyclerview.widget.RecyclerView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/catGrid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:numColumns="3" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
 </com.fieldbook.tracker.traitLayouts.MultiCatTraitLayout>
