--- a/app/src/main/res/layout/trait_multicat_button.xml
+++ b/app/src/main/res/layout/trait_multicat_button.xml
@@ -5,9 +5,10 @@
     android:layout_gravity="center"
     android:focusable="false"
     android:focusableInTouchMode="false"
+    android:id="@+id/multicatButton"
     android:gravity="center"
-    android:minWidth="@dimen/button_default_width"
-    android:text="@string/search_dialog_clear"
+    android:singleLine="true"
+    android:text="@string/traits_format_multicategorical"
     android:textColor="#000000"
     android:textSize="@dimen/text_size_large"
     android:textStyle="bold" />
