--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -58,4 +58,16 @@
         <item>cloud</item>
         <item>brapi</item>
     </string-array>
+
+    <string-array name="pref_export_source_entries">
+        <item>@string/import_source_ask</item>
+        <item>@string/import_source_local</item>
+        <item>@string/import_source_brapi</item>
+    </string-array>
+
+    <string-array name="pref_export_source_values">
+        <item>ask</item>
+        <item>local</item>
+        <item>brapi</item>
+    </string-array>
 </resources>
