--- a/app/src/main/res/layout/trait_numeric.xml
+++ b/app/src/main/res/layout/trait_numeric.xml
@@ -206,5 +206,17 @@
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/k17"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:minWidth="@dimen/button_width_numeric"
+            android:text="B"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
     </GridLayout>
 </com.fieldbook.tracker.traitLayouts.NumericTraitLayout>
