Quick GoTo improvements

--- a/app/src/main/res/layout/activity_collect.xml
+++ b/app/src/main/res/layout/activity_collect.xml
@@ -194,7 +194,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:imeOptions="actionDone"
-            android:inputType="phone"
+            android:inputType="textVisiblePassword"
             android:singleLine="true"
             android:text=""
             android:textColor="#000000"
@@ -220,7 +220,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:imeOptions="actionDone"
-            android:inputType="phone"
+            android:inputType="textVisiblePassword"
             android:singleLine="true"
             android:text=""
             android:textColor="#000000"
