--- a/app/src/main/res/layout/dialog_info.xml
+++ b/app/src/main/res/layout/dialog_info.xml
@@ -19,7 +19,7 @@
         android:text="@string/brapi_info_title"
         android:textColor="#000000"
         android:textSize="@dimen/text_size_large"
-        android:textStyle="bold"></TextView>
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/body_message"
@@ -30,12 +30,12 @@
         android:paddingVertical="10dp"
         android:text="Example"
         android:textColor="#000000"
-        android:textSize="@dimen/text_size_medium"></TextView>
+        android:textSize="@dimen/text_size_medium"/>
 
     <Button
         android:id="@+id/closeBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/dialog_ok"></Button>
+        android:text="@string/dialog_ok"/>
 
 </LinearLayout>
