--- a/app/src/main/res/layout/dialog_summary.xml
+++ b/app/src/main/res/layout/dialog_summary.xml
@@ -1,47 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="#FFFFFF"
-    android:orientation="vertical"
+    android:layout_height="0dp"
+    android:layout_weight="1"
     android:paddingLeft="20dp"
     android:paddingTop="5dp"
     android:paddingRight="20dp"
     android:paddingBottom="5dp">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:layout_weight="1">
-
-        <TextView
-            android:id="@+id/field_name"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:text=""
-            android:textColor="#000000"
-            android:textSize="@dimen/text_size_medium"
-            android:textStyle="bold" />
-    </ScrollView>
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/field_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/closeBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:minWidth="@dimen/button_default_width"
-            android:text="@string/dialog_close"
-            android:textColor="#000000"
-            android:textSize="@dimen/text_size_large"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-</LinearLayout>
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:text=""
+        android:textColor="#000000"
+        android:textSize="@dimen/text_size_medium"
+        android:textStyle="bold" />
+</ScrollView>
