--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -61,6 +61,10 @@
         <item name="android:windowTitleBackgroundStyle">@android:color/transparent</item>
         <item name="android:background">@android:color/white</item>
         <item name="android:windowTitleStyle">@style/MyTitleTextStyle</item>
+
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowSoftInputMode">stateUnchanged</item>
     </style>
 
     <style name="MyTitleTextStyle">
@@ -77,17 +81,6 @@
 
     <style name="ButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:textAllCaps">false</item>
-    </style>
-
-    <style name="ChangelogTitles" parent="Theme.AppCompat.Light.Dialog">
-        <item name="android:textSize">@dimen/text_size_medium</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/main_colorAccent</item>
-    </style>
-
-    <style name="ChangelogContent" parent="Theme.AppCompat.Light.Dialog">
-        <item name="android:textSize">@dimen/text_size_small</item>
-        <item name="android:textColor">#000000</item>
     </style>
 
     <style name="AppToolbar" parent="@style/Widget.AppCompat.Toolbar">
