https://github.com/PhenoApps/Field-Book/issues/129
feature request for issue #129

Still needs testing. Modified BrAPI service to take a pagination parameter which is now a preference in preferences_brapi.xml

Pagination preference must be an integer, or else it defaults to 1000.

Modified all locations of BrAPI service initialization, added buffer preference icon, added preference key BRAPI_PAGINATION.

--- a/app/src/main/res/xml/preferences_brapi.xml
+++ b/app/src/main/res/xml/preferences_brapi.xml
@@ -20,5 +20,12 @@
             android:icon="@drawable/ic_exit_to_app"
             android:key="revokeBrapiAuth"
             android:title="@string/brapi_revoke_auth" />
+
+        <EditTextPreference
+            android:icon="@drawable/ic_buffer"
+            android:key="BRAPI_PAGINATION"
+            android:defaultValue="1000"
+            android:title="@string/brapi_pagination"/>
+
     </PreferenceCategory>
 </PreferenceScreen>
