--- a/app/src/main/res/xml/preferences_profile.xml
+++ b/app/src/main/res/xml/preferences_profile.xml
@@ -2,15 +2,21 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Preference
-        android:icon="@drawable/ic_nav_drawer_person"
+        android:icon="@drawable/ic_pref_profile_person"
         android:key="pref_profile_person"
         android:summary=""
         android:title="@string/profile_person" />
 
     <Preference
-        android:icon="@drawable/ic_nav_drawer_location"
+        android:icon="@drawable/ic_pref_profile_location"
         android:key="pref_profile_location"
         android:summary=""
         android:title="@string/profile_location" />
+
+    <Preference
+        android:icon="@drawable/ic_pref_profile_delete"
+        android:key="pref_profile_reset"
+        android:summary=""
+        android:title="@string/profile_reset" />
 
 </PreferenceScreen>
