--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="disable_entry_arrows">
+        <item>@string/preferences_behavior_disable_entry_arrow_neither</item>
         <item>@string/preferences_behavior_disable_entry_arrow_left</item>
         <item>@string/preferences_behavior_disable_entry_arrow_right</item>
         <item>@string/preferences_behavior_disable_entry_arrow_both</item>
     </string-array>
 
     <string-array name="disable_entry_arrows_values">
-        <item>left</item>
-        <item>right</item>
-        <item>both</item>
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
     </string-array>
 
     <string-array name="pref_toolbar_customize_title">
