--- a/app/src/main/res/layout/activity_brapi_trials.xml
+++ b/app/src/main/res/layout/activity_brapi_trials.xml
@@ -59,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="0"
         android:gravity="center"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <ProgressBar
             android:layout_width="wrap_content"
@@ -72,7 +72,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="bottom|center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <include
+            layout="@layout/brapi_pagination_buttons"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="bottom|center"
+            android:orientation="horizontal">
 
         <Button
             android:id="@+id/selectTrial"
@@ -85,6 +94,7 @@
             android:text="@string/brapi_trials_select"
             android:textColor="@color/s_text"
             android:textSize="20sp" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
