enhancement #173, app asks for user's name every 24 hours dependent on preference.

--- a/app/src/main/res/xml/preferences_profile.xml
+++ b/app/src/main/res/xml/preferences_profile.xml
@@ -19,4 +19,11 @@
         android:summary=""
         android:title="@string/profile_reset" />
 
+    <CheckBoxPreference
+        android:icon="@drawable/ic_pref_profile_delete"
+        android:key="VerifyUserEvery24Hours"
+        android:defaultValue="true"
+        android:summary="@string/pref_profile_summary"
+        android:title="@string/pref_profile_title" />
+
 </PreferenceScreen>
